--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
 <div id="split">
     <div id="bio">
-        <h1 style="font-size: 50px;">yacoub<br>kahkajian</h1>
-        <p>full stack web developer<br>studying computer science @ princeton university<br>associate web developer @ the daily princetonian</p>
+        <h1 style="font-size: 40px; margin-bottom: -5px">yacoub kahkajian</h1>
+        <p style="line-height: 25px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         <div class="socials">
-            <img src="assets/github.svg" alt="GitHub profile">
-            <img src="assets/linkedin.svg" alt="LinkedIn profile">
-            <img src="assets/daily-prince.svg" alt="The Princetonian author page">
+            <a href="https://github.com/YacoubKahkajian"><img src="assets/github.svg" alt="GitHub profile"></a>
+            <a href="https://www.linkedin.com/in/yacoub-kahkajian/"><img src="assets/linkedin.svg" alt="LinkedIn profile"></a>
+            <a href="https://www.dailyprincetonian.com/staff/yacoub-kahkajian"><img src="assets/daily-prince.svg" alt="The Princetonian author page"></a>
         </div>
     </div>
     <div id="projects">
@@ -30,15 +30,6 @@
                 </div>
             </div>
         </template>
-    </div>
-</div>
-<div id="more">
-    <div class="about">
-        <div class="description" style="margin-top: -20px">
-            <h1 style>about</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-        </div>
-        <img class="headshot" src="assets/new-headshot.png" alt="A headshot of Yacoub">
     </div>
 </div>
 </body>
