--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Yacoub Kahkajian</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width initial-scale=1, maximum-scale=5.0, minimum-scale=0.7, user-scalable=no">
+    <meta name="description" content="A full stack web developer studying computer science at Princeton University">
+    <meta name="keywords" content="Yacoub Kahkajian, Yacoub, Kahkajian">
+    <link rel="icon" href="assets/favicon.ico" sizes="any">
+    <link rel="icon" href="assets/favicon.svg" sizes="image/svg+xml">
     <link rel="stylesheet" href="style.css">
     <script src="containers.js" defer></script>
-    <title>Title</title>
 </head>
 <body>
 <div id="split">
     <div id="bio">
+        <img src="assets/yacoub.svg" alt="A drawing of Yacoub" style="height: 80px; margin-bottom: -20px">
         <h1 style="font-size: 40px; margin-bottom: -5px">yacoub kahkajian</h1>
-        <p style="line-height: 25px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <p style="line-height: 25px;">is a full stack web developer, data journalist, and oftentimes, a
+            mix of both. He is dedicated to making the web more delightful to use. He is currently studying and teaching computer
+            science at <span class="bold">Princeton University</span> and is an Associate Web Developer at
+            <span class="bold">The Daily Princetonian</span>. Previously, he was selected by
+            <span class="bold">Google</span> to participate in their 2022 Computer Science Summer Institute. You can
+            shoot him an email at <a href="mailto:yacoub@princeton.edu">yacoub@princeton.edu</a> or get
+            in touch via <a href="https://github.com/YacoubKahkajian">GitHub</a> or
+            <a href="https://www.linkedin.com/in/yacoub-kahkajian/">LinkedIn</a>.
+        </p>
         <div class="socials">
             <a href="https://github.com/YacoubKahkajian"><img src="assets/github.svg" alt="GitHub profile"></a>
             <a href="https://www.linkedin.com/in/yacoub-kahkajian/"><img src="assets/linkedin.svg" alt="LinkedIn profile"></a>
@@ -25,8 +39,9 @@
                     <div class="date"></div>
                 </div>
                 <div class="info">
+                    <div class="stack bold"></div>
                     <div class="describe"></div>
-                    <div class="link"><a href="">CHECK IT OUT</a></div>
+                    <div class="link"></div>
                 </div>
             </div>
         </template>
