Added social metadata

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <title>Yacoub Kahkajian</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width initial-scale=1, maximum-scale=5.0, minimum-scale=0.7, user-scalable=no">
-    <meta name="description" content="A full stack web developer studying computer science at Princeton University">
+    <meta name="description" content="A full stack web developer studying computer science at Princeton University.">
     <meta name="keywords" content="Yacoub Kahkajian, Yacoub, Kahkajian">
+    <meta name="image" content="https://yacoub.xyz/assets/banner.png">
+    <meta property="og:title" content="Yacoub Kahkajian">
+    <meta property="og:url" content="https://yacoub.xyz">
+    <meta property="og:description" content="A full stack web developer studying computer science at Princeton University.">
     <link rel="icon" href="assets/favicon.ico" sizes="any">
     <link rel="icon" href="assets/favicon.svg" sizes="image/svg+xml">
     <link rel="stylesheet" href="style.css">
