More social metadata woo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="image" content="https://yacoub.xyz/assets/banner.png">
     <meta property="og:title" content="Yacoub Kahkajian">
     <meta property="og:url" content="https://yacoub.xyz">
+    <meta property="og:image" content="https://yacoub.xyz/assets/banner.png">
     <meta property="og:description" content="A full stack web developer studying computer science at Princeton University.">
     <link rel="icon" href="assets/favicon.ico" sizes="any">
     <link rel="icon" href="assets/favicon.svg" sizes="image/svg+xml">
