--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     <link rel="icon" href="assets/favicon.ico" sizes="any">
     <link rel="icon" href="assets/favicon.svg" sizes="image/svg+xml">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/jgp1xjh.css">
     <script src="containers.js" defer></script>
 </head>
 <body>
 <div id="split">
     <div id="bio">
         <img src="assets/yacoub.svg" alt="A drawing of Yacoub" style="height: 80px; margin-bottom: -20px">
-        <h1 style="font-size: 40px; margin-bottom: -5px">yacoub kahkajian</h1>
+        <h1>yacoub kahkajian</h1>
         <p style="line-height: 25px;">is a full stack web developer, data journalist, and oftentimes, a
             mix of both. He is dedicated to making the web more delightful to use. He is currently studying and teaching computer
             science at <span class="bold">Princeton University</span> and is an Associate Web Developer at
