--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <div id="bio">
         <img src="assets/yacoub.svg" alt="A drawing of Yacoub" style="height: 80px; margin-bottom: -20px">
         <h1>yacoub kahkajian</h1>
-        <p style="line-height: 25px;">is a full stack web developer, data journalist, and oftentimes, a
-            mix of both. He is dedicated to making the web more delightful to use. He is currently studying and teaching computer
-            science at <span class="bold">Princeton University</span> and is an Associate Web Developer at
-            <span class="bold">The Daily Princetonian</span>. Previously, he was selected by
-            <span class="bold">Google</span> to participate in their 2022 Computer Science Summer Institute. You can
-            shoot him an email at <a href="mailto:yacoub@princeton.edu">yacoub@princeton.edu</a> or get
+        <p style="line-height: 25px;">is a full stack web developer making the kinds of apps people like. 
+	    He is currently studying and teaching computer science at <span class="bold">Princeton 
+	    University</span> and is a Head Web Developer at <span class="bold">The Daily 
+            Princetonian</span>. Previously, he was selected by <span class="bold">Google</span> 
+            to participate in their 2022 Computer Science Summer Institute. You can shoot him an 
+            email at <a href="mailto:yacoub@princeton.edu">yacoub@princeton.edu</a> or get
             in touch via <a href="https://github.com/YacoubKahkajian">GitHub</a> or
             <a href="https://www.linkedin.com/in/yacoub-kahkajian/">LinkedIn</a>.
         </p>
