--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="info">
                     <div class="stack bold">react native, typescript, expo</div>
                     <div class="describe">Worked on adding platform-specific polish, finding the sources of crashes that didn't throw errors, addressing tester feedback, and adding new features before The Daily Princetonian's big debut on the Google Play Store!</div>
-                    <div class="link"><a href="">COMING SOON</a></div>
+                    <div class="link"><a href="https://play.google.com/store/apps/details?id=com.dailyprincetonian.thedailyprincetonianapp">CHECK IT OUT</a></div>
                 </div>
             </div>
             
