--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
     <div id="bio">
         <img src="assets/yacoub.svg" alt="A drawing of Yacoub" style="height: 80px; margin-bottom: -20px">
         <h1>yacoub kahkajian</h1>
-        <p style="line-height: 25px;">is a full stack web developer making the kinds of apps people like. 
+        <p style="line-height: 25px;">is a full stack developer making the kinds of apps people like. 
 	    He is currently studying and teaching computer science at <span class="bold">Princeton 
-	    University</span> and is a Head Web Developer at <span class="bold">The Daily 
-            Princetonian</span>. Previously, he was selected by <span class="bold">Google</span> 
-            to participate in their 2022 Computer Science Summer Institute. You can shoot him an 
-            email at <a href="mailto:yacoub@princeton.edu">yacoub@princeton.edu</a> or get
-            in touch via <a href="https://github.com/YacoubKahkajian">GitHub</a> or
-            <a href="https://www.linkedin.com/in/yacoub-kahkajian/">LinkedIn</a>.
+	    University</span>, is a Lead Software Engineer at <span class="bold">The Daily 
+        Princetonian</span>, and is interning at <span class="bold">New Voters</span> for the summer as a
+        Product Manager. Previously, he was selected by <span class="bold">Google</span> 
+        to participate in their 2022 Computer Science Summer Institute. You can shoot him an 
+        email at <span id="secret"><i>click me!</i></span> or get
+        in touch via <a href="https://github.com/YacoubKahkajian">GitHub</a> or
+        <a href="https://www.linkedin.com/in/yacoub-kahkajian/">LinkedIn</a>.
         </p>
         <div class="socials">
             <a href="https://github.com/YacoubKahkajian"><img src="assets/github.svg" alt="GitHub profile"></a>
@@ -38,6 +39,30 @@
         </div>
     </div>
     <div id="projects">
+            <div class="project" style="color: white; background-color: black;" tabindex="0" role="button">
+                <div class="header">
+                    <div class="name">youth civic hub</div>
+                    <div class="date">6/2024</div>
+                </div>
+                <div class="info">
+                    <div class="stack bold">gatsby, react, graphql</div>
+                    <div class="describe">The project I'm PM-ing for this summer! In partnership with the Office of the New York City Public Advocate and over 50 local nonprofits, New Voters is developing ways to attract Gen Z New Yorkers to civic opportunities and education in their city. Our team has been diligently rolling out new features and enhancements since launch, so keep tabs on the Youth Civic Hub if this piques your interest!</div>
+                    <div class="link"><a href="https://www.youthcivichub.org/">CHECK IT OUT</a></div>
+                </div>
+            </div>
+            
+            <div class="project" style="color: white; background-color: black;" tabindex="0" role="button">
+                <div class="header">
+                    <div class="name">princeton rewind</div>
+                    <div class="date">5/2024</div>
+                </div>
+                <div class="info">
+                    <div class="stack bold">javascript, css</div>
+                    <div class="describe">A project commemorating Princeton's Class of 1999 deserves fittingly nostalgic aesthetics. Some  clever CSS was used to give this project the same look and feel as Windows 9x. I also drew the pixel art icons on the desktop and in the taskbar of this operating system from an alternate timeline. So retro!</div>
+                    <div class="link"><a href="https://projects.dailyprincetonian.com/princeton-rewind-1999/">CHECK IT OUT</a></div>
+                </div>
+            </div>
+
             <div class="project" style="color: white; background-color: black;" tabindex="0" role="button">
                 <div class="header">
                     <div class="name">the prince android app</div>
@@ -81,7 +106,7 @@
                 </div>
                 <div class="info">
                     <div class="stack bold">javascript, json, css</div>
-                    <div class="describe">A special issue of The Daily Princetonian exploring the various groups on campus who have a stake in Princeton's future. I encouraged the web design section to move away from hard-coding HTML elements within their projects during the development of this issue, programming a script that automatically clones template components with relevant information from a JSON file using vanilla JavaScript. This resulted in massive time savings near the project's deadline. All my team had to do to update a carousel was change a line in a JSON file without dealing with pesky or misplaced markup tags!</div>
+                    <div class="describe"><span class="bold">Winner of the New Jersey Press Association 2023-24 College Newspaper Contest Web Project award!</span><br><br>A special issue of The Daily Princetonian exploring the various groups on campus who have a stake in Princeton's future. I encouraged the web design section to move away from hard-coding HTML elements within their projects during the development of this issue, programming a script that automatically clones template components with relevant information from a JSON file using vanilla JavaScript.</div>
                     <div class="link"><a href="https://projects.dailyprincetonian.com/who-runs-princeton/">CHECK IT OUT</a></div>
                 </div>
             </div>
