--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1>yacoub kahkajian</h1>
             <p style="line-height: 25px;">is a full stack developer making the kinds of apps people like. 
                 He is currently studying and teaching computer science at <span class="bold">Princeton 
-                    University</span> and is a Lead Software Engineer at <span class="bold">The Daily 
+                    University</span> and is the Chief Technology Officer of <span class="bold">The Daily 
                         Princetonian</span>. Previously, he interned as a product manager at <span class="bold">New Voters</span> 
                         and was selected by <span class="bold">Google</span> to participate in their 2022 Computer Science 
                         Summer Institute. You can shoot him an email at <span id="secret"><i>click me!</i></span> or get
